리스트뷰 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Subactivity"
         android:layout_below="@+id/edittext"
         android:onClick="startSubactivity"/>
+    <Button
+        android:layout_below="@id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Start ListViewActivity"
+        android:onClick="startListViewActivity"/>
 </RelativeLayout>
