네이버 연동 기능 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,9 +31,24 @@
         android:text="Start ListViewActivity"
         android:onClick="startListViewActivity"/>
     <Button
+        android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/button2"
         android:text="Start ScrollViewActivity"
         android:onClick="startScrollViewActivity"/>
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button3"
+        android:text="NaverOpenAPI"
+        android:onClick="startNaverOpenAPIActivity"/>
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button4"
+        android:text="DaumOpenAPI"
+        android:onClick="startDaumOpenAPIActivity"/>
 </RelativeLayout>
