--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,4 +51,11 @@
         android:layout_below="@id/button4"
         android:text="DaumOpenAPI"
         android:onClick="startDaumOpenAPIActivity"/>
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button5"
+        android:text="GoogleMap"
+        android:onClick="startGoogleMapActivity"/>
 </RelativeLayout>
