SQLite 데이터베이스 연동 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,11 @@
         android:layout_below="@id/button5"
         android:text="GoogleMap"
         android:onClick="startGoogleMapActivity"/>
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button6"
+        android:text="SQLiteDatabase"
+        android:onClick="startSQLiteDatabaseActivity"/>
 </RelativeLayout>
