--- a/app/src/main/res/layout/activity_arduino.xml
+++ b/app/src/main/res/layout/activity_arduino.xml
@@ -15,6 +15,10 @@
         android:layout_height="wrap_content"
         android:text="BUZZER OFF"
         android:onClick="clickBuzzerOffButton"/>
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
